# acoj

./: LICENSE  package.json
app/: layout.tsx  page.tsx
app/problem/[id]/: page.tsx
backend/: Cargo.toml
backend/src/: compiler.rs  init.rs  judge.rs  main.rs
backend/src/judger/: go_judge.rs  mod.rs  seele.rs
component/: lefter.tsx  toolbar.jsx  toolbar.tsx
test/: a.out  test.cpp
test/seele/: config.toml  seele.yaml
