[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version =  "=0.5.0-rc.3", features = ["json"]}
rocket_contrib = "0.4.11"
serde = {version = "1.0.188", features = ["derive"]}
